--- a/app/src/main/res/layout/activity_join_page.xml
+++ b/app/src/main/res/layout/activity_join_page.xml
@@ -66,19 +66,24 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
         android:text="아이디"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/user_phone"
-        tools:layout_editor_absoluteY="272dp" />
+        app:layout_constraintEnd_toEndOf="@+id/textView12"
+        app:layout_constraintStart_toStartOf="@+id/textView12"
+        app:layout_constraintTop_toBottomOf="@+id/user_shop" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:text="매장이름"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="186dp" />
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
 
 
     <EditText
@@ -99,6 +104,7 @@
         android:id="@+id/user_shop"
         android:layout_width="300dp"
         android:layout_height="40dp"
+        android:layout_marginTop="10dp"
         android:background="@color/white"
         android:ems="10"
         android:hint="  매장명을 입력해 주세요"
@@ -106,21 +112,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.405"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="223dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/textView16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
         android:text="비밀번호"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="359dp" />
+        app:layout_constraintEnd_toEndOf="@+id/textView11"
+        app:layout_constraintStart_toStartOf="@+id/textView11"
+        app:layout_constraintTop_toBottomOf="@+id/user_id" />
 
     <EditText
         android:id="@+id/user_pw"
         android:layout_width="300dp"
         android:layout_height="40dp"
+        android:layout_marginTop="10dp"
         android:background="@color/white"
         android:ems="10"
         android:hint="  비밀번호를 입력해 주세요"
@@ -128,21 +138,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.405"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="398dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="전화번호"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="447dp" />
+        app:layout_constraintEnd_toEndOf="@+id/textView16"
+        app:layout_constraintStart_toStartOf="@+id/user_pw"
+        app:layout_constraintTop_toBottomOf="@+id/user_pw" />
 
     <EditText
         android:id="@+id/user_phone"
         android:layout_width="300dp"
         android:layout_height="40dp"
+        android:layout_marginTop="10dp"
         android:background="@color/white"
         android:ems="10"
         android:hint="  전화번호를 입력해 주세요"
@@ -150,7 +163,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.405"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="486dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -179,11 +192,12 @@
         android:id="@+id/btn_join"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:background="@color/main_color"
         android:text="가입 완료"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="543dp" />
+        app:layout_constraintTop_toBottomOf="@+id/user_phone" />
 
 
     <ImageButton
