--- a/app/src/main/res/layout/activity_customer_main_page.xml
+++ b/app/src/main/res/layout/activity_customer_main_page.xml
@@ -25,7 +25,6 @@
         app:srcCompat="@drawable/kobb" />
 
     <Button
-        android:id="@+id/button"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:backgroundTint="#FF5555"
@@ -74,7 +73,7 @@
         app:srcCompat="@drawable/casher" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/hi"
         android:layout_width="0dp"
         android:layout_height="25dp"
         android:layout_marginTop="12dp"
@@ -87,7 +86,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/hi2"
         android:layout_width="0dp"
         android:layout_height="25dp"
         android:text="매장에서 드시나요? 아니면 포장해드릴까요?"
@@ -96,30 +95,30 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/hi" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/btn_Eat_main_menu_page"
         android:layout_width="250dp"
         android:layout_height="150dp"
         android:layout_marginStart="80dp"
-        android:backgroundTint="#FF5555"
+        android:background="@drawable/eat2"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        tools:srcCompat="@drawable/eat2" />
+  />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/btn_TakeOut_main_menu_page"
         android:layout_width="250dp"
         android:layout_height="150dp"
         android:layout_marginEnd="80dp"
-        android:backgroundTint="#FF5555"
+        android:background="@drawable/takeout2"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        tools:srcCompat="@drawable/takeout2" />
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
