--- a/app/src/main/res/layout-land/activity_customer_main_page.xml
+++ b/app/src/main/res/layout-land/activity_customer_main_page.xml
@@ -119,24 +119,25 @@
                 android:layout_width="250dp"
                 android:layout_height="150dp"
                 android:layout_marginStart="80dp"
-                android:backgroundTint="#FF5555"
+                android:background="@drawable/eat2"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView2"
-                tools:srcCompat="@drawable/eat2" />
+                 />
 
             <ImageButton
                 android:id="@+id/imageButton2"
                 android:layout_width="250dp"
                 android:layout_height="250dp"
-                android:layout_marginEnd="80dp"
-                android:backgroundTint="#FF5555"
+                android:layout_marginEnd="92dp"
+                android:background="@drawable/takeout2"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView2"
-                tools:srcCompat="@drawable/takeout2" />
+                app:layout_constraintVertical_bias="0.0"
+                 />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
