--- a/app/src/main/res/layout-land/activity_sales_condition_page.xml
+++ b/app/src/main/res/layout-land/activity_sales_condition_page.xml
@@ -12,13 +12,16 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline"
                 android:layout_width="wrap_content"
@@ -41,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.9" />
+                app:layout_constraintGuide_percent="0.86" />
 
             <TextView
                 android:id="@+id/textView"
@@ -185,19 +188,308 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView28"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text=""
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView29"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text=""
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView30"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="1"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView31"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="2"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView32"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="3"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView39"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="4"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView40"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="5"
+                        android:textSize="20sp" />
+                </TableRow>
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView41"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="6"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView42"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="7"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView43"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="8"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView44"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="9"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView45"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="10"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView46"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="11"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView47"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="12"
+                        android:textSize="20sp" />
+                </TableRow>
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView48"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="13"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView49"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="14"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView50"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="15"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView51"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="16"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView52"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="17"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView53"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="18"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView54"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="19"
+                        android:textSize="20sp" />
+                </TableRow>
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView55"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="20"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView56"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="21"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView57"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="22"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView58"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="23"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView59"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="24"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView60"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="25"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView61"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="26"
+                        android:textSize="20sp" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView62"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="27"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView63"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="28"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView64"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="29"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView65"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="30"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView66"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="31"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView67"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="1"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/textView68"
+                        android:layout_width="59dp"
+                        android:layout_height="70dp"
+                        android:gravity="top"
+                        android:text="2"
+                        android:textSize="20sp" />
+                </TableRow>
 
             </TableLayout>
 
@@ -206,7 +498,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.25" />
+                app:layout_constraintGuide_percent="0.39" />
+
+            <TextView
+                android:id="@+id/textView70"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="3월"
+                android:textSize="34dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/guideline3"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textView" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
