--- a/app/src/main/res/layout-land/activity_customer_main_page.xml
+++ b/app/src/main/res/layout-land/activity_customer_main_page.xml
@@ -115,7 +115,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/btn_Eat_main_menu_page"
                 android:layout_width="250dp"
                 android:layout_height="150dp"
                 android:layout_marginStart="80dp"
@@ -127,7 +127,7 @@
                  />
 
             <ImageButton
-                android:id="@+id/imageButton2"
+                android:id="@+id/btn_TakeOut_main_menu_page"
                 android:layout_width="250dp"
                 android:layout_height="250dp"
                 android:layout_marginEnd="92dp"
